fix: remove border-left in ::webkit-scrollbar (#22)
* fix: remove border-left in ::webkit-scrollbar

hides scrollbar that was introduced in https://github.com/standardnotes/StyleKit/commit/41443fe9499c55690994136ca1115ed57735db4c

changes border-left to none

* chore(version): bump version to 2.2.1

--- a/src/css/_scrollbar.scss
+++ b/src/css/_scrollbar.scss
@@ -7,7 +7,7 @@
   ::-webkit-scrollbar {
     width: 17px;
     height: 18px;
-    border-left: 0.5px solid var(--sn-stylekit-scrollbar-track-border-color);
+    border-left: none;
   }
 
   ::-webkit-scrollbar-thumb {
